fix: make navbar 100vw on mobile

--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -1,3 +1,7 @@
+.header {
+  background: #f5f5f5;
+}
+
 #root .App .fixed .header .flex {
   width: 84.5%;
   margin: 0 auto;
@@ -7,7 +11,7 @@
   padding: 0;
 }
 
-#root .App .fixed .header .flex .logo{
+#root .App .fixed .flex .logo{
   width: 100px;
 }
 
